<resources>
    <string name="app_name">Sales</string>
    <string name="enter_valid_email">Please enter valid email!</string>
    <string name="enter_valid_email_and_password">Please enter correct email and password!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="something_went_wrong_please">Something went wrong! Please try again later.</string>
    <string name="empty_">%s can\'t be empty</string>
    <string name="name_length">Please enter full name</string>
    <string name="mobile_number_length">Mobile number should be of 10 digits</string>
    <string name="enter_valid_number">Please enter valid mobile number!</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="verification_code">Verification Code</string>
    <string name="_91">+91</string>
    <string name="sign_up_now">If your number isn\'t registered, Sign Up now!</string>
    <string name="terms_and_conditions">By continuing you are agreeing to our \nTerms and Conditions and \nPrivacy and Policy</string>
    <string name="verify_your_account">Please enter your  registered mobile \nnumber to verify your account</string>
    <string name="login">Log In</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="followup">Follow Up</string>
    <string name="pending">Pending</string>
    <string name="profile">Profile</string>
    <string name="all">All</string>
    <string name="assigned">Assigned</string>
    <string name="visited">Visited</string>
    <string name="moa_negotiation">MOA Negotiation</string>
    <string name="moa_signed">MOA Signed</string>
    <string name="not_interested">Not Interested</string>
    <string name="hot_status">Hot</string>
    <string name="warm_status">Warm</string>
    <string name="cool_status">Cool</string>
    <string name="basic_details">Basic Details</string>
    <string name="school_name">School Name</string>
    <string name="school_address">School Address</string>
    <string name="board">Board</string>
    <string name="school_total_intake">Total School Intake</string>
    <string name="total_no_of_classroom">Total No.of Classroom</string>
    <string name="coordinator_name">Coordinator Name</string>
    <string name="coordinator_phone_no">Coordinator Phone Number</string>
    <string name="school_details">School Details</string>
    <string name="next">Next</string>
    <string name="director_dm_name">Director/DM Name</string>
    <string name="director_dm_phone_no">Director/DM Phone Number</string>
    <string name="avg_school_fee">Average School Fees</string>
    <string name="existing_labs_in_school">Existing Labs In School</string>
    <string name="expected_quoted_value">Expected Quoted Value Per Student</string>
    <string name="upload_school_img">Upload School Image</string>
    <string name="select_file">Select file</string>
    <string name="update">Update</string>
    <string name="follow_up_details">Follow up Details</string>
    <string name="lead_type">Select Lead Type</string>
    <string name="follow_date">Select Next Follow Up Date</string>
    <string name="next_follow_date"><![CDATA[Next Follow Up Date & Time]]></string>
    <string name="follow_up_type">Select Follow Up Type</string>
    <string name="remark">Remark</string>
    <string name="remark_mandate">Remark</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_next_meeting_date_hint">Select next meeting date</string>
    <string name="select_next_meeting_time_hint">Select next meeting time</string>
    <string name="cancelled_meeting">Cancelled Meeting</string>
    <string name="price_pitch_per_student">Price Pitch per student*</string>
    <string name="quotation_validity">Quotation validity*</string>
    <string-array name="agreement_duration">
        <item>item 1</item>
        <item>item 2</item>
    </string-array>
    <string name="agreement_duration_mandate">Agreement duration*</string>
    <string name="agreement_duration_compulsary">Agreement duration*</string>
    <string name="quotation_duration_compulsary">Quotation duration*</string>
    <string name="select_meeting_agenda">Select meeting agenda</string>
    <string-array name="meeting_with_whom">
        <item>item 1</item>
        <item>item 2</item>
    </string-array>
    <string name="meeting_with_whom_mandate">Meeting with whom*</string>
    <string-array name="conversion_ratio">
        <item>item 1</item>
        <item>item 2</item>
    </string-array>
    <string name="conversion_ratio_mandate">Conversion ratio*</string>
    <string name="next_meeting_date_time_mandate"><![CDATA[Next meeting date & time*]]></string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="total_interested_intake">Total interested intake</string>
    <string name="total_interested_intake_mandate">Total interested intake*</string>
    <string name="final_intake_mandate">Final intake*</string>
    <string name="enter_final_costing_per_student_mandate">Enter final costing per student*</string>
    <string name="discussed_with_whom">discussed with whom</string>
    <string name="discussed_with_whom_mandate">MOA Discussed with whom*</string>
    <string name="select_designation">Select designation</string>
    <string name="select_designation_mandate">Select designation*</string>
    <string name="draft_moa_file">Draft MOA File</string>
    <string name="select_installment">Select installment</string>
    <string name="amount">Amount</string>
    <string name="installment_date_time"><![CDATA[Installment date & time]]></string>
    <string name="save">Save</string>
    <string name="propose_costing">Propose Costing</string>
    <string name="blank"></string>
    <string name="downloading_start">Downloading start…</string>
    <string name="authority_name">Authority Name*</string>
    <string name="my_account">My Account</string>
    <string name="please_enter_valid_email_address">Please enter valid email address!</string>
    <string name="please_select_the_lead_type">Please select the lead type!</string>
    <string name="please_enter_number_of_classrooms">Please enter number of classrooms!</string>
    <string name="please_enter_valid_phone_no">Please enter valid phone number!</string>
    <string name="some_fields_are_empty_or_not_valid">Some fields are empty or not valid!</string>
    <string name="please_enter_valid_school_name">Please enter valid school name!</string>
    <string name="please_enter_valid_school_address">Please enter valid school address!</string>
    <string name="please_enter_valid_coordinator_name">Please enter valid coordinator name!</string>
    <string name="please_enter_total_school_intake">Please enter total school intake!</string>
    <string name="total_school_intake_less_than">Please enter total shcool intake less than 20000!</string>
    <string name="total_no_of_classrooms_less_than">Please enter total number of classrooms less than 20000!</string>
    <string name="please_select_board">Please select board!</string>
    <string name="please_connection_message">Please check the internet connection and try again!</string>
    <string name="activity">Activity</string>
    <string name="revenue">Revenue</string>
    <string name="change_password">Change Password</string>
    <string name="chart_analysis">Chart Analysis</string>
    <string name="log_out">Log out</string>
    <string name="great_work_title">Great Work!</string>
    <string name="moa_success_dialog_message">The school has been added to your Pending for approval list</string>
    <string name="demo_text">Lorem Ipsum is simply dummy text</string>
    <string name="pdf_file_demo_name">File Title.pdf</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="address">Address</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="upcoming">Upcoming</string>
    <string name="meeting">Meeting</string>
    <string name="successful_password_reset">Successful Password Reset!</string>
    <string name="you_can_use_your_new_password_to_login_to_your_account">You can use your new password to login \nto your account</string>
    <string name="confirm_logout">Confirm Logout?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="cancel_meeting">Cancel Meeting?</string>
    <string name="are_you_sure_you_want_to_cancel_the_meeting">Are you sure you want to cancel the meeting?</string>
    <string name="reason_for_cancelation">Reason for cancelation</string>
    <string name="reschedule_meeting">Reschedule Meeting</string>
    <string name="select_next_meeting_time">Select next meeting time</string>
    <string name="write_remark">Write remark</string>
    <string name="great">Great!</string>
    <string name="the_school_has_been_added_to_your_visited_school_list">The school has been added to your visited school list</string>
    <string name="meeting_date_time"><![CDATA[Next meeting date & time]]></string>
    <string name="meeting_date_time_mandate"><![CDATA[Next meeting date & time*]]></string>
    <string name="teacher_principal_meeting">Teacher/Principal Meeting</string>
    <string name="dm_level_meeting">DM Level Meeting</string>
    <string name="teacher_principal_attended_the_meet">Teacher/Principal attended the meet? *</string>
    <string name="product_demo_happened">Product demo happened?</string>
    <string name="do_you_want_to_reschedule_meeting_with_teacher_principal">Do you want to reschedule meeting with Teacher/Principal ?</string>
    <string name="interested_in_lab_set_up">Interested in lab set up?</string>
    <string name="propose_costing_stage">Propose Costing Stage</string>
    <string name="dm_attended_the_meet">DM attended the meet?</string>
    <string name="next_follow_up_meeting_scheduled">Next follow up meeting scheduled?</string>
    <string name="price_discussed_inclusive_gst">Price discussed inclusive GST?*</string>
    <string name="quotation_shared">Quotation shared?</string>
    <string name="payment_scheduled_locked">Payment scheduled locked?</string>
    <string name="coordinator_meeting_details_updated_successfully">Teacher/Principal meeting details updated successfully.</string>
    <string name="meeting_has_been_rescheduled_with_coordinator">Meeting has been rescheduled with Teacher/Principal.</string>
    <string name="meeting_has_been_moved_to_not_interested_section">School has been moved to not interested section.</string>
    <string name="director_meeting_details_updated_successfully">Director meeting details updated successfully.</string>
    <string name="meeting_has_been_rescheduled_with_director">Meeting has been rescheduled with Director.</string>
    <string name="meeting_has_been_rescheduled">Meeting has been rescheduled.</string>
    <string name="other">\Other*</string>
    <string name="_1st_installment_details">%s Installment Details</string>
    <string name="date_and_time">Date and Time</string>
    <string name="_2nd_installment">2nd Installment</string>
    <string name="_3rd_installment">3rd Installment</string>
    <string name="upload_file">Upload File</string>
    <string name="_4th_installment">4th Installment</string>
    <string name="remark_validation"><![CDATA[abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ,.\']]></string>
    <string name="number_validation">1234567890</string>
</resources>